Bug 582137 - Check editable before pasting data into table
Change-Id: I68c021fa4d3aac93b5f11044462e98c8534a930e
Signed-off-by: Martin Jobst <martin.jobst@posteo.de>